# compile_time_sort

./: CHANGELOG.md  Cargo.toml  README  README.md
.github/workflows/: rust.yml
benches/: slice_sort.rs  slice_sorts.rs  std_unstable_sort.rs
src/: float_sort.rs  lib.rs  tests.rs
tests/: integration_tests.rs
