[package]
name = "compile_time_sort"
version = "1.0.0"
edition = "2021"
description = "Sort arrays and slices of primitives in const contexts."
keywords = ["const", "sort", "const-sort", "sorting"]
categories = ["algorithms", "no-std", "no-std::no-alloc"]
license = "MIT OR Apache-2.0"
rust-version = "1.59.0"
repository = "https://github.com/JSorngard/compile_time_sort"
documentation = "https://docs.rs/compile_time_sort/"

[dependencies]

[features]
# Enables the `sort_*_slice` functions and raises the MSRV of the crate from 1.59.0 to 1.83.0.
sort_slices = []

[dev-dependencies]
rand = "0.9.0"
quickcheck = "1.0"

[package.metadata.docs.rs]
# Document all features.
all-features = true
