[package]
name = "compile_time_sort"
version = "1.0.1"
edition = "2021"
description = "Sort arrays and slices of primitives in const contexts."
keywords = ["const", "sort", "const-sort", "sorting"]
categories = ["algorithms", "no-std", "no-std::no-alloc"]
license = "MIT OR Apache-2.0"
rust-version = "1.59.0"
repository = "https://github.com/JSorngard/compile_time_sort"
documentation = "https://docs.rs/compile_time_sort/"

[dependencies]
rustversion = "1.0.0"

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
quickcheck = { version = "1.0", default-features = false }
